Added PortfolioLink functionality in User Controller
